--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ VITE_PROJECT_ID
 VITE_DATADASE_ID 
 VITE_BLOGCOLLON_ID 
 VITE_BLOGCREATOR_ID 
+VITE_REAERCOLLON_ID
 
 VITE_BLOGIMG_BUCKET 
 VITE_LOGO_BUCKET 
